hphp/hack/test/typecheck/reactive/nonrx7.php.exp
File "nonrx7.php", line 5, characters 9-45:
Invalid argument list for `__NonRx` attribute that is placed on anonymous function. Argument list for `__NonRx` attribute that is used in this position should be empty. (Parsing[1002])
File "nonrx7.php", line 5, characters 9-45:
Reactive functions can only call other reactive functions. (Typing[4200])
File "nonrx7.php", line 5, characters 9-45:
This function is normal.
